# Calendar_Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup_google_auth.py
agent/: calendar_agent.py
config/: google_calendar_config.py  mcp_config.py  settings.py
integrations/: __init__.py  google_calendar_service.py
mcp_server/: handlers.py  server.py
tests/: test_mcp_integration.py
utils/: helpers.py
